--- a/src/scss/_Header.scss
+++ b/src/scss/_Header.scss
@@ -1,5 +1,5 @@
 #mobileMenuOut{
-    display: block;
+   display: block;
 }
 #mobileDisable{
     display: none;
@@ -11,7 +11,7 @@
     position: relative;
 }
 .navbar {
-    display: none;
+    
     &-brand {
         display: none;
 
@@ -19,28 +19,23 @@
             display: none;
         }
     }
-    &.menubarToggleBtn{
-        display: block;
-        z-index: 15;
+    & .menubarToggleBtn{
+        z-index: 100;
+
+        width: 100%;
     }
     & .bars{
         font-size: 5rem;
-        background-color: $color-2;
-        border-radius: 50%;
+        background-color: $color-1;
+        width: 100%;
         z-index: 12;
         padding: 13px;
-        position: fixed;
-        top: 4%;
-        right: 4%;
+        
         color: white;
         cursor: pointer;
         box-shadow: 0 0 4px 2px rgba(0,0,0,0.3);
         transition: all .2s;
-        &:hover {
-            transform: scale(1.1);
-            transition: all .2s;
-            box-shadow: 0 0 3px 1px rgba(0,0,0,0.2);
-        }
+        
     }
     &-nav {
         position: fixed;
@@ -51,10 +46,10 @@
         width: 100%;
         height: 100%;
         padding-top: 10%;
-        animation: Menubar .5s;
+        animation: Menubar .3s;
         & .nav-item {
             background-color: $color-2;
-            margin: 5px 100px;
+            margin: 10% 100px 0 100px;
             text-align: center;
             font-size: 1.4rem;
             font-weight: bold;
@@ -80,15 +75,24 @@
 
 
 @include respond(md){
+    #mobileMenuOut{
+        display: block;
+    }
+    #mobileDisable{
+        display: block;
+    }
+    #refresh{
+        display: block;
+    }
     .ContainerHeader{z-index: 9;}
     .navbar{
         background-color: $color-1 ;
         &-brand {
             text-align: center !important;
-            display: block;
+            display: inline-block;
     
             & .logo-content {
-                display: block;
+                display: inline-block;
                 background-color: $white;
                 width: 8rem; 
                 height: 8rem;
