--- a/src/scss/_animation.scss
+++ b/src/scss/_animation.scss
@@ -87,8 +87,8 @@
 }
 
 @keyframes Menubar{
-    0%{opacity: 0;width: 0;height: 0;}
-    100%{opacity: 1;width: 100%;height: 100%;}
+    0%{opacity: 0;height: 0;}
+    100%{opacity: 1;height: 100%;}
 }
 
 @keyframes refreshMenubar{
