--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -19,6 +19,7 @@
         &-container{
             margin: 20px 0;
             width: 80%;
+
             background-color: $color-1;
             border-radius: 5px;
             box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
@@ -26,7 +27,7 @@
             & a{
                 text-decoration: none;
                 & img{
-                    height: 370px;
+                    height: 350px;
                     width: 100%;
                     border-radius:5px 5px 0 0;
                 }
@@ -87,6 +88,7 @@
         & .secondText{
             &-container{
                 margin: 0 10px;
+                height: 100%;
                 & a{
                     & img{
                         height: 230px;
