--- a/src/scss/_login.scss
+++ b/src/scss/_login.scss
@@ -1,9 +1,7 @@
 .contain-login {
     background-color: white;
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 100vh;
+    
+    min-height: 73vh;
     background-repeat: no-repeat; 
     background-size: cover;
     z-index: 10;
@@ -63,7 +61,6 @@
                 & img{
                     margin-top: 50%;
                     width: 50%;
-
                     background-color: white;
                     border-radius: 50%;
                     margin-left: 50%;
@@ -73,12 +70,8 @@
         }
 
         & .overlay-form {
-            padding: 2rem 1rem;
-            position: absolute;
-            top: 10%;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 90%;
+            
+            width: 100%;
             & h1{
                 margin-bottom: 10px;
                 text-align: center;
@@ -141,21 +134,26 @@
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
+    margin-top: 30px;
     background-color: $color-1;
     padding: 10px 0;
+    padding: 3% 0;
     border-radius: 5px;
     & a{
+        display: none;
         &:hover{text-decoration: none;}
     }
     & .switchButton{
         box-shadow: 0 0px 3px 1px rgba(0,0,0,0.3);
         margin: 0 20px;
-        padding: 14px 8px;
-        border-radius: 50%;
+        padding: 10px 45px;
+        border-radius: 5px;
         background-color: white;
         color: $color-1;
         user-select: none;
         cursor: pointer;
+        font-size: 1.4rem;
+        text-align: center;
     }
 }
 
@@ -163,6 +161,10 @@
 @include respond(md){
     .contain-login{
         background-image: url('./images/LoginBG.png');
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100vh;
         & .contain{
             position: absolute;
             top: 50%;
@@ -173,11 +175,13 @@
             min-height: 50vh;
             width: 65%;
             height: auto;
+            
             & .overlay-form{
                 position: relative;
                 top: 0%;
                 left: 0%;
                 transform: translate(0%,0%);
+                padding: 2rem 1rem;
                 width: 100%;
                 & .button-group{
                     margin-top: 15% !important;
@@ -185,7 +189,35 @@
             }
         }
         & .switchLoginBtn{
+            
+            & a{
+                display: block;
+            }
+        }
+
+        .switchLoginBtn{
+            display: flex;
+            justify-content: center;
+            background-color: $color-1;
+            padding: 10px 0;
             margin-bottom: 20px;
+            margin-top: 0px;
+            border-radius: 5px;
+            & a{
+                display: block;
+                &:hover{text-decoration: none;}
+            }
+            & .switchButton{
+                box-shadow: 0 0px 3px 1px rgba(0,0,0,0.3);
+                margin: 0 20px;
+                padding: 14px 8px;
+                border-radius: 50%;
+                background-color: white;
+                color: $color-1;
+                user-select: none;
+                cursor: pointer;
+                font-size: 1rem;
+            }
         }
     }
     
