--- a/src/scss/_patient.scss
+++ b/src/scss/_patient.scss
@@ -1,3 +1,21 @@
+.backtoPatient-button{
+  background-color: $color-2;
+  margin-left: 50%;
+  display: flex;
+  justify-content: center;
+  text-align: start;
+  transform: translateX(-50%);
+  margin: 10px 0 10px 50%;
+  padding: 5px 0;
+  width: 70%;
+  border-radius: 5px;
+  color: white;
+  font-size: 1.8rem;
+  &:hover {
+    color: white;
+    text-decoration: none;
+  }
+}
 .patientlist-table {
   min-height: 100vh;
 }
@@ -128,4 +146,10 @@
 
   .form-control {
     width: 50%;
+  }
+
+  @include respond(md){
+    .backtoPatient-button{
+      width: 30%;
+    }
   }
